k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: devops
  name: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: devops
    spec:
      containers:
      - image: sahan/devops:3
        name: devops
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: devops
  name: devops
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: devops
  type: ClusterIP
status:
  loadBalancer: {}
