k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: devops
                port:
                  number: 8080
            path: /
            pathType: Prefix
          - backend:
              service:
                name: logstash
                port:
                  number: 5044
            path: /logstash
            pathType: Prefix
